--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,24 +1,37 @@
 Package: Romeb
 Type: Package
 Title: Robust Median-Based Bayesian Growth Curve Modeling
-Version: 0.1.0
-Description: Implements robust median-based Bayesian growth-curve
-    models that handle MCAR, MAR and MNAR missing-data mechanisms
-    and allow auxiliary variables.  Fitted via JAGS and summarised
-    with 'coda'.
+Version: 0.1.2
+Authors@R: 
+    c(person(given = "Dandan", family = "Tang",
+             email = "tangdd20@gmail.com", role = c("aut", "cre"),
+             comment = c(ORCID = "0009-0007-3453-9660")),
+       person("Xin", "Tong",
+           role = "aut"))
+Description: Implements robust median-based Bayesian growth curve models
+    that handle Missing Completely at Random (MCAR), Missing At Random (MAR),
+    and Missing Not At Random (MNAR) missing-data mechanisms, and allow
+    auxiliary variables. Models are fitted via 'rjags' (interface to 'JAGS')
+    and summarized with 'coda'.
 License: GPL-3
+URL: https://github.com/DandanTang0/Romeb
+BugReports: https://github.com/DandanTang0/Romeb/issues
 Encoding: UTF-8
-Depends: R (>= 4.2)
+Depends:
+    R (>= 4.2)
 Imports:
     rjags,
     coda,
-    stats
+    stats   
 Suggests:
     knitr,
     rmarkdown,
-    usethis,
-    devtools
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
+Config/testthat/edition: 3
+SystemRequirements: JAGS
 LazyData: true
+LazyDataCompression: xz
+Language: en-US
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
